remove eap repo

--- a/ansible_tower_aws/roles/aws.create/templates/hosts.j2
+++ b/ansible_tower_aws/roles/aws.create/templates/hosts.j2
@@ -39,3 +39,6 @@ ansible_winrm_server_cert_validation=ignore
 tower_rhel_nodes
 rhel_nodes
 win_nodes
+
+[instructor_tower]
+{{ workshop_prefix }}.tower.0.{{ domain_name }}
